--- a/src/components/shared/PropertyCard/PropertyCard.scss
+++ b/src/components/shared/PropertyCard/PropertyCard.scss
@@ -1,3 +1,11 @@
 .PropertyCard {
   display: block;
+
+  .card {
+    .card-img-top {
+      height: 140px;
+      object-fit: cover;
+      object-position: 100% 0%;
+    }
+  }
 }
