--- a/src/components/pages/SingleProperty/SingleProperty.scss
+++ b/src/components/pages/SingleProperty/SingleProperty.scss
@@ -1,3 +1,14 @@
 .SingleProperty {
   display: block;
+
+  .card-img {
+    width: 200px;
+    height: 150px;
+    object-fit: cover;
+    object-position: 50% 0%;
+  }
+
+  .card-text {
+    max-width: 300px;
+  }
 }
