--- a/src/components/pages/SinglePin/SinglePin.scss
+++ b/src/components/pages/SinglePin/SinglePin.scss
@@ -1,3 +1,19 @@
 .SinglePin {
   display: block;
+
+  .card-img {
+    width: 200px;
+    height: 150px;
+    object-fit: cover;
+    object-position: 50% 0%;
+  }
+
+  .card-text {
+    max-width: 300px;
+  }
+
+  #map-container {
+    width: 500px;
+    height: 500px;
+  }
 }
