--- a/src/components/shared/Modal/Modal.scss
+++ b/src/components/shared/Modal/Modal.scss
@@ -5,7 +5,7 @@
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    padding-top: 100px;
+    padding-top: 90px;
     overflow: hidden; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
@@ -14,7 +14,8 @@
       display: block;
 
       .modal-img {
-        max-width: 50%;
+        max-width: 60%;
+        max-height: calc(100vh - 125px);
         border-radius: 5px;
       }
 
